Animated Influence slider of NLA Strip doesn't update #63865

Closed
opened 2019-04-24 19:47:18 +02:00 by RedMser · 8 comments
Contributor

Blender Version
Broken: version: 2.80 (sub 58), branch: blender2.7, commit date: 2019-04-21 20:30, hash: 797539e76c

The "Influence" control that shows in the N-menu of the NLA editor when having a NLA Strip selected (under "Evaluation") can be animated and it works just fine.
But the UI portion of it (the slider in the menu) does not update at all when playing the animation, it just stays at the value it last had.

This might also be the case for the other sliders in this category - I haven't tested!

Reproduce: bug_nlastrip_influence.blend

**Blender Version** Broken: version: 2.80 (sub 58), branch: blender2.7, commit date: 2019-04-21 20:30, hash: `797539e76c` The "Influence" control that shows in the N-menu of the NLA editor when having a NLA Strip selected (under "Evaluation") can be animated and it works just fine. But the UI portion of it (the slider in the menu) does not update at all when playing the animation, it just stays at the value it last had. This might also be the case for the other sliders in this category - I haven't tested! Reproduce: [bug_nlastrip_influence.blend](https://archive.blender.org/developer/F6973165/bug_nlastrip_influence.blend)
Author
Contributor

Added subscriber: @RedMser

Added subscriber: @RedMser
Member

Added subscribers: @Sergey, @JacquesLucke

Added subscribers: @Sergey, @JacquesLucke
Member

@Sergey, could this be some missing write-back after the animation has been evaluated?

@Sergey, could this be some missing write-back after the animation has been evaluated?

Added subscriber: @brecht

Added subscriber: @brecht

This is due to missing ID pointer in PointerRNA passed to animsys_write_orig_anim_rna.
@brecht, is there a way to write to such property?

This is due to missing ID pointer in PointerRNA passed to `animsys_write_orig_anim_rna`. @brecht, is there a way to write to such property?

If the ID pointer is missing it should not be considered a valid pointer, the id pointer should only be NULL for data that is not part of any datablock (e.g. user preferences). Whatever code is creating that pointer should be fixed.

If the ID pointer is missing it should not be considered a valid pointer, the id pointer should only be NULL for data that is not part of any datablock (e.g. user preferences). Whatever code is creating that pointer should be fixed.

This issue was referenced by 80c3501d19

This issue was referenced by 80c3501d194969fbc2babe9096aa3b9221aa13fa

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63865
No description provided.